# search-shortcuts

./: Cargo.toml
cf-worker/: .gitignore  Cargo.toml  package-lock.json  package.json  wrangler.toml
lib/: Cargo.toml
lib/src/: lib.rs
resources/: index.html  osdf.xml
search-shortcuts/: Cargo.toml
search-shortcuts/src/: errors.rs  lib.rs
server/: Cargo.toml
server/src/: errors.rs  main.rs
worker/: .gitignore  Cargo.toml  wrangler.toml
worker/src/: lib.rs
worker/worker/: metadata_wasm.json  worker.js
