[package]
name = "server"
version = "0.1.0"
authors = ["user <40304161+fullylegit@users.noreply.github.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "3.3.0", features = ["openssl"] }
env_logger = "0.8.2"
openssl = "0.10.30"
search-shortcuts = { path = "../search-shortcuts/" }
serde = "1.0.117"
thiserror = "1.0.22"
