[package]
name = "server"
version = "0.1.0"
authors = ["user <40304161+fullylegit@users.noreply.github.com>"]
edition = "2021"

[dependencies]
actix-web = { version = "4.1.0", features = ["openssl"] }
env_logger = "0.9.0"
itertools = "0.10.3"
openssl = "0.10.30"
search-shortcuts = { path = "../search-shortcuts/" }
serde = { version = "1.0.117", features = ["derive"] }
thiserror = "1.0.22"
