[package]
name = "server"
version = "0.1.0"
authors = ["user <40304161+fullylegit@users.noreply.github.com>"]
edition = "2021"

[dependencies]
actix-web = { version = "4.5.1", features = ["openssl"] }
env_logger = "0.11.3"
itertools = "0.12.1"
openssl = "0.10.64"
search-shortcuts = { path = "../search-shortcuts/" }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
