[package]
name = "worker"
version = "0.1.0"
authors = ["user <40304161+fullylegit@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.68"
web-sys = { version = "0.3.45", features = ["Headers", "Request", "Response", "ResponseInit"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
url = "2.2.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_qs = "0.7.0"
search-shortcuts = { path = "../search-shortcuts/" }
wasm-bindgen-futures = "0.4.18"
itertools = "0.9.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.18"
